<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite">

        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/Textview_sure"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/Textview_delete_Ac"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/Textview_delete_Ac"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    />

                <View
                    android:layout_width="0.75dp"
                    android:layout_height="40dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/Textview_cancel"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Textview_cancel"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>