<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_BottomSheet"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_fromCam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorPrimary"

            app:srcCompat="@drawable/ic_baseline_camera_enhance_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/Textview_fromcamera"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>
    </LinearLayout>
    <View
        android:background="@android:color/darker_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"/>

    <LinearLayout
        android:id="@+id/layout_fromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_baseline_image_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/Textview_fromgallery"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>
    </LinearLayout>
    <View
        android:background="@android:color/darker_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"/>


    <LinearLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/Textview_logout"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>
    </LinearLayout>
    <View
        android:background="@android:color/darker_gray"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"/>


    <LinearLayout
        android:id="@+id/layout_deleteAc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorRed"
            app:srcCompat="@drawable/ic_baseline_delete_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/Textview_delete_Ac"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorRed"/>
    </LinearLayout>





</LinearLayout>