<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ForgetPassword">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/f" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:srcCompat="@drawable/illustration" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="32dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="4dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:id="@+id/layout_pinview"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Textview_forgetPassword"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.chaos.view.PinView
                        android:id="@+id/pinview"
                        style="@style/PinWidget.PinView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="number"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:itemCount="5"
                        app:itemHeight="36dp"
                        app:itemRadius="4dp"
                        app:itemSpacing="6dp"
                        app:itemWidth="36dp"
                        app:lineColor="@color/colorPrimary"
                        app:lineWidth="2dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_email"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Textview_forgetPassword"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <EditText
                            android:id="@+id/editText_email"
                            android:textSize="12sp"
                            android:textColor="@color/colorText"
                            android:hint="@string/Edittext_Email"
                            android:inputType="textEmailAddress"
                            android:maxLength="100"
                            android:maxLines="1"
                            android:drawableStart="@drawable/username"
                            android:background="@null"
                            android:drawablePadding="8dp"
                            android:paddingTop="12dp"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="12dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <View
                        android:background="@android:color/darker_gray"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.75dp"/>
                    <TextView
                        android:id="@+id/Textview_email_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Textview_email_error"
                        android:visibility="gone"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/colorRed"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_password"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Textview_forgetPassword"
                        android:textColor="@color/colorText"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        app:passwordToggleEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">
                        <EditText
                            android:id="@+id/editText_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:drawableStart="@drawable/password"
                            android:drawablePadding="8dp"
                            android:hint="@string/Edittext_Password"
                            android:inputType="textPassword"
                            android:maxLength="100"
                            android:maxLines="1"
                            android:paddingStart="8dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="12dp"
                            android:textColor="@color/colorText"
                            android:textSize="12sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <View
                        android:background="@android:color/darker_gray"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="0.75dp"/>
                    <TextView
                        android:id="@+id/Textview_password_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Textview_password_error"
                        android:visibility="gone"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:layout_gravity="start"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/colorRed"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_below="@id/card"
                android:layout_marginTop="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout1">
                <Button
                    android:id="@+id/btn_continue"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_continue"
                    android:textStyle="bold"
                    android:background="@drawable/background_button"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btn_checkCode"
                    android:visibility="gone"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_checkCode"
                    android:textStyle="bold"
                    android:background="@drawable/background_button"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btn_goback"
                    android:visibility="gone"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_goback"
                    android:textStyle="bold"
                    android:background="@drawable/background_button"
                    android:textAllCaps="false"/>
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>ث

</RelativeLayout>